# crisis

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
CrisisViz/: .gitignore  HANDOFF.md  Package.swift  README.md  bundle.sh  package-dmg.sh
CrisisViz/Sources/CrisisViz/App/: CrisisApp.swift
CrisisViz/Sources/CrisisViz/Canvas/: DAGLayoutEngine.swift
CrisisViz/Sources/CrisisViz/Chapters/: Ch01_Problem.swift  Ch02_Graph.swift  Ch03_Partition.swift  Ch04_Rounds.swift  Ch05_Voting.swift  Ch06_Leader.swift  Ch07_Order.swift  Ch08_DA_Problem.swift  Ch09_DA_Design.swift  Ch10_Byzantine.swift
CrisisViz/Sources/CrisisViz/Engine/: AppSettings.swift  Ch00Timeline.swift  Ch01Timeline.swift  Ch02Timeline.swift  Ch03Timeline.swift  Ch04Timeline.swift  Ch05Timeline.swift  Ch06Timeline.swift  Ch07Timeline.swift  Ch08Timeline.swift  Ch09Timeline.swift  DataManager.swift  GossipScript.swift  InspectionState.swift  SceneEngine.swift
CrisisViz/Sources/CrisisViz/Glass/: GlassControls.swift  GlassNarration.swift
CrisisViz/Sources/CrisisViz/Model/: Cast.swift  ChapterDefinitions.swift  ConsensusData.swift  SceneNarrations.swift  SimulationData.swift
CrisisViz/Sources/CrisisViz/Testbed/: NarrativeInvariants.swift  SceneCapture.swift  SceneVideoCapture.swift  SourceAudit.swift
CrisisViz/Sources/CrisisViz/Views/: ImmersiveView.swift  SceneRouter.swift  Sidebars.swift  VertexInspector.swift
CrisisViz/Tools/: MakeAppIcon.swift
src/crisis/: __init__.py  crypto.py  demo.py  export_json.py  gossip.py  graph.py  message.py  node.py  order.py  recorder.py  rounds.py  voting.py  weight.py
src/crisis_agents/: DESIGN.md  README.md  __init__.py  agent.py  alarm.py  boundary.py  claim.py  cli.py  live_agent.py  mothership.py  proof.py  vote.py
src/crisis_agents/scenarios/: __init__.py  fact_check.py  reference_doc.txt
tests/: test_alarm.py  test_async_quiescence.py  test_boundary.py  test_claim.py  test_crypto.py  test_demo_fact_check.py  test_graph.py  test_live_agent.py  test_message.py  test_mothership.py  test_no_chokepoint.py  test_order.py  test_proof.py  test_recorder.py  test_rounds.py  test_simulation.py  test_vote.py  test_voting.py  test_weight.py
