[project]
name = "crisis"
version = "0.1.0"
description = "Crisis: Probabilistically Self Organizing Total Order in Unstructured P2P Networks"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "saymrwulf" },
]
maintainers = [
    { name = "Mirco Richter (paper author)", email = "mirco.richter@mailbox.org" },
]
dependencies = [
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "rich>=13.0",
]

[project.scripts]
crisis-node = "crisis.node:main"
crisis-demo = "crisis.demo:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
